k8s/05-memos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos-deployment
  namespace: moshiri-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memos
  template:
    metadata:
      labels:
        app: memos
    spec:
      containers:
      - name: memos
        image: neosmemo/memos:latest
        ports:
        - containerPort: 5230
---
apiVersion: v1
kind: Service
metadata:
  name: memos-service
  namespace: moshiri-app
spec:
  selector:
    app: memos
  ports:
  - port: 5230
    targetPort: 5230
