k8s/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memos-ingress
  namespace: moshiri-app
spec:
  rules:
  - host: moshiri.osdl.ir
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: memos-service
            port:
              number: 5230
